--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -156,6 +156,46 @@ header{
   margin-top: 10px;
 }
 
+/* Event Page */
+
+#image-container,
+#info-container{
+  margin-top: 30px;
+}
+
+#image-container{
+  border-radius: 10px;
+}
+
+#info-container{
+  font-size: 36px;
+  font-weight: 900;
+}
+
+#info-container p {
+  margin: 0;
+  font-size: 14px;
+  display: flex;
+}
+
+#info-container h3,
+#description-container h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#info-container ion-icon {
+  font-size: 20px;
+  color: #f2a340;
+  margin-right: 5px;
+}
+
+#info-container #event-submit {
+  margin: 20px 0;
+}
+
+
+
 /* Footer  */
 
 footer{
