--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,7 +51,6 @@ header{
   padding: 5px 0;
 }
 
-
 #navbar img {
   width: 50px;
 }
@@ -63,6 +62,19 @@ header{
 
 #navbar a:hover{
    color: #f2a340;
+}
+
+section{
+  display: flex;
+  justify-content: center;
+  background-color: gray;
+}
+
+.navbar-logo{
+  text-decoration: none;
+  color: #f2a340;
+  text-align:left;
+  /* display: flex; */
 }
 
 /* Search Container */
@@ -122,7 +134,7 @@ header{
 
 .card .card-date {
   font-size: 12px;
-  color: #ccc;
+  color: #acacace5;
 }
 
 .card .card-title {
@@ -136,9 +148,10 @@ header{
   font-size: 14px;
   color: #757575;
 }
+ 
 /* Event create page */
 
-#event-create-container {
+#event-create-container { 
   padding: 30px;
 }
 
@@ -150,6 +163,7 @@ header{
 #event-create-container select,
 #event-create-container textarea { 
   font-size: 12px;
+  margin: 5px;
 }
 
 #event-create-container .btn{
@@ -194,7 +208,15 @@ header{
   margin: 20px 0;
 }
 
+#items-list {
+  list-style: none;
+  padding-left: 0;
+}
 
+#items-list li {
+  display: flex;
+  font-size: 12px;
+}
 
 /* Footer  */
 
