--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -218,6 +218,20 @@ section{
   font-size: 12px;
 }
 
+#description-container{
+  margin-top: 30px;
+}
+
+/* Dashboard */
+
+.dashboard-title-container{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.dashboard-events-container th{
+  width: 25%;
+}
 /* Footer  */
 
 footer{
